<resources>
    <string name="app_name">Android17</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="newGame">Begin New Game</string>
    <string name="ReplayGame">Replay Game</string>
    <string name="title_activity_play_game">PlayGame</string>
    <string name="ai">AI</string>
    <string name="draw">DRAW</string>
    <string name="resign">RESIGN</string>
    <string name="back">BACK</string>
    <string name="next">NEXT</string>
    <string name="undo">UNDO</string>
    <string name="date">SORT BY DATE</string>
    <string name="open">START RECORD</string>
    <string name="delete">DELETE RECORD</string>
    <string name="name">SORT BY NAME</string>
    <string name="textview">Choose a white piece to move</string>
    <string name="saved_games">Saved Games</string>
    <string name="title_activity_saved_games">SavedGames</string>
    <string name="press_next_to_start_a_game">Press NEXT to start a game</string>
    <string-array name = "games_array">
        <item>Game 1</item>
        <item>Game 2</item>
        <item>Game 3</item>
    </string-array>
</resources>
