<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SavedGames">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ListView
            android:id="@+id/games_list"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:choiceMode="singleChoice"
            android:listSelector="@android:color/darker_gray"
            app:layout_anchor="@+id/linearLayout"
            app:layout_anchorGravity="center">

        </ListView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="#ff222222"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingStart="5dp"
                android:paddingEnd="5dp">


                <Button
                    android:id="@+id/open_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/open"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingStart="5dp"
                android:paddingEnd="5dp">

                <Button
                    android:id="@+id/name_btn"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/name"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingStart="5dp"
                android:paddingEnd="5dp">


                <Button
                    android:id="@+id/date_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/date"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingStart="5dp"
                android:paddingEnd="5dp">

                <Button
                    android:id="@+id/delete_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/delete"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>