<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReplayGame">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#0F0101"
        android:orientation="vertical"
        android:overScrollMode="ifContentScrolls"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/statusView"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="#0D0001"
                android:fontFamily="monospace"
                android:padding="10dp"
                android:text="@string/press_next_to_start_a_game"
                android:textAllCaps="false"
                android:textColor="#F7F2F3"
                android:textColorHighlight="#D2000F"
                android:textColorLink="#00E60606"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="Press NEXT to start the game" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="542dp"
                android:contentDescription="@string/ai"
                android:src="@drawable/chessboard"
                android:layout_centerInParent="true" />

            <GridView
                android:id="@+id/board"
                android:layout_width="match_parent"
                android:layout_height="542dp"
                android:background="#00FFFFFF"
                android:gravity="center"
                android:horizontalSpacing="0dp"
                android:layout_centerVertical="true"
                android:scrollbars="none"
                android:layout_marginTop="20dp"
                android:numColumns="8"
                android:padding="0dp"
                android:stretchMode="columnWidth"
                android:verticalSpacing="0dp"/>


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#ff222222"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingStart="5dp"
                android:paddingEnd="5dp">

                <Button
                    android:id="@+id/back_btn"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/back"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingStart="5dp"
                android:paddingEnd="5dp">


                <Button
                    android:id="@+id/next_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/next"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>